--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@ Carl Strathearn, Dimitra Gkatzia
           <p>Invited Speakers</p>
         </div>
 
-        <div class="row">
+<!--         <div class="row">
             <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
               <div class="member" data-aos="fade-up">
                 <div class="member-img">
@@ -675,15 +675,15 @@ Carl Strathearn, Dimitra Gkatzia
                     <a href=""><i class="bi bi-instagram"></i></a>
                     <a href=""><i class="bi bi-linkedin"></i></a>
                   </div> -->
-                </div>
+<!--                 </div>
                 <div class="member-info">
                   <h4><a href="http://www.dcs.gla.ac.uk/~jeff/">Jeff Dalton</a></h4>
                   <span>University of Glasgow</span>
                 </div>
               </div>
             </div>
-            
-            <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
+             -->
+<!--             <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
                 <div class="member" data-aos="fade-up">
                   <div class="member-img">
                     <img src="assets/img/speaker/Michel_Galley.jpg" class="img-fluid" alt="">
@@ -694,9 +694,9 @@ Carl Strathearn, Dimitra Gkatzia
                     <span>Microsoft Research</span>
                   </div>
                 </div>
-            </div>
+            </div> -->
 
-            <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
+<!--             <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
               <div class="member" data-aos="fade-up">
                 <div class="member-img">
                   <img src="assets/img/speaker/Mari_Ostendorf.png" class="img-fluid" alt="">
@@ -708,8 +708,8 @@ Carl Strathearn, Dimitra Gkatzia
                 </div>
               </div>
           </div>
-
-            <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
+ -->
+<!--             <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
                 <div class="member" data-aos="fade-up">
                   <div class="member-img">
                     <img src="assets/img/speaker/Siva_Reddy.png" class="img-fluid" alt="">
@@ -721,8 +721,8 @@ Carl Strathearn, Dimitra Gkatzia
                   </div>
                 </div>
             </div>
-
-            <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
+ -->
+<!--             <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
                 <div class="member" data-aos="fade-up">
                   <div class="member-img">
                     <img src="assets/img/speaker/Zhou_Yu.jpg" class="img-fluid" alt="">
@@ -733,9 +733,10 @@ Carl Strathearn, Dimitra Gkatzia
                     <span>Columbia University</span>
                   </div>
                 </div>
-            </div>
+            </div> -->
 
-          </div>
+<!--           </div>  -->
+	      <p>TBA</p>
       </div>
     </section><!-- End Speaker Section -->
 
@@ -750,7 +751,7 @@ Carl Strathearn, Dimitra Gkatzia
             <p>Program Committee</p>
           </div>
   
-          <div class="row">
+<!--           <div class="row">
               <ul class="no-bullets">
    <li> [1] Bo Han (Hong Kong Baptist University, HK)  </li>
    <li> [2] Xiang Wang (USTC, China)  </li>
@@ -761,8 +762,8 @@ Carl Strathearn, Dimitra Gkatzia
    <li> [7] Xiatian Zhu (University of Surrey, UK)  </li>
    <li> [8] Anthony Dick (The University of Adelaide, AU)  </li>
               </ul>
-          </div>
-  
+          </div> -->
+  	<p>TBA</p>
           
   
         </div>
