--- a/index.html
+++ b/index.html
@@ -197,10 +197,7 @@ In the context of IR, deep multimodal learning has shown the prominent potential
 		<li> Featured papers (title and abstract of the paper, plus the original paper): already published papers or papers summarizing existing publications in leading conferences and high-impact journals that are relevant for the topic of the workshop;</li>
 		<li> Demonstration papers (up to 2 pages in length, plus unlimited pages for references): original or already published prototypes and operational evaluation approaches in the area of explainable recommender systems.</li>
 	 </ol>
-	<p>Page limits include diagrams and appendices. </p>
-	<p>Submissions should be single-blind, written in English, and formatted according to the current ACM two-column conference format. </p>
-	<p>Suitable LaTeX, Word, and Overleaf templates are available from the ACM Website (use “sigconf” proceedings template for LaTeX and the Interim Template for Word). </p>
-
+	
 <!-- 	      <p>We welcome submissions of original work as <i>long</i> or <i>short</i> papers, as well as non-archival papers. We also accept paper submissions via <a href="">OpenReview</a>. All accepted papers will be presented at the workshop. </p> -->
         <br>
       
@@ -250,7 +247,11 @@ In the context of IR, deep multimodal learning has shown the prominent potential
      <br>
 	      
         <h4>Submission Instructions</h4>
-          <p><i>Formatting Guidelines</i>:<br>
+	<p>Page limits include diagrams and appendices. </p>
+	<p>Submissions should be single-blind, written in English, and formatted according to the current ACM two-column conference format. </p>
+	<p>Suitable LaTeX, Word, and Overleaf templates are available from the ACM Website (use “sigconf” proceedings template for LaTeX and the Interim Template for Word). </p>
+
+<!--           <p><i>Formatting Guidelines</i>:<br>
             We accept <i>long</i> (eight pages plus unlimited references) and <i>short</i> (four pages plus unlimited references) papers, which should
             conform to <a target="_blank" href="https://aclrollingreview.org/cfp#paper-submission-and-templates">ARR CFP guidelines</a>.
           </p>
@@ -262,14 +263,14 @@ In the context of IR, deep multimodal learning has shown the prominent potential
             <p><i>Submit your paper</i>: <br>
               <!-- <blockquote class="blockquote"> -->
                 <!-- <b><i class="bi bi-arrow-right-circle-fill text-danger" style="font-size: 1.5rem;"></i></b>  -->
-                <ul>
+<!--                 <ul>
                   <li>
                     For submitting papers directly to our workshop, use button "ACM Multimedia 2023 Workshop MMIR Submission" on the submission site.
                   </li>
                   <li>
                     For submitting papers with ARR reviews, use button "ACM Multimedia 2023 Workshop MMIR Commitment Submission" on the submission site.
                   </li>MM
-                </ul>
+                </ul> -->
                 <blockquote>
                   <button type="button" class="btn btn-outline-dark "><a href="https://openreview.net/group?id=aclweb.org/ACMMultimedia/2023/Workshop/MMIR"><b class="text-danger">Submission Site</b></a></button>
                 </blockquote>
