--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
           </h2>
           <p class="orange-text">October 29 - November 3, 2023 at Ottawa, Ontario, Canada</p>
           <p class="animate__animated fanimate__adeInUp">
-              Information retrieval (IR) is a fundamental technique aiming to acquire information from a collection of documents, web pages, or other sources. While traditional text-based IR has achieved great success, the under-utilization of varied data sources in different modalities (i.e., text, images, audio, and video) would hinder IR techniques from giving its full advancement and thus limits the applications in the real world. 
+              Information retrieval (IR) is a fundamental technique aiming to acquire information from a collection of documents, web pages, or other sources. 
+		  While traditional text-based IR has achieved great success, the under-utilization of varied data sources in different modalities (i.e., text, images, audio, and video) would hinder IR techniques from giving its full advancement and thus limits the applications in the real world. 
+		  This workshop of Multimodal Learning for Information Retrieval (MMIR) encourages to dive deep into the related topics.
          </p>
          <p class="text-white">Join our <a href="https://groups.google.com/g/mmir23acm-mm23">Google Group</a> for important updates.</p>
 <!--           <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a> -->
@@ -169,7 +171,13 @@ In the context of IR, deep multimodal learning has shown the prominent potential
           <div style="width=95%">
             <p>Welcome to 1<sup>st</sup> MMIR Workshop co-located with <b><a class="green-text" href="https://www.acmmm2023.org/">ACM Multimedia 2023</a></b>!</p>
             <p  style="text-align:justify">
-                Information retrieval (IR) is a fundamental technique that aims to acquire information from a collection of documents, web pages, or other sources. While traditional text-based IR has achieved great success, the under-utilization of varied data sources in different modalities (i.e., text, images, audio, and video) would hinder IR techniques from giving its full advancement and thus limits the applications in the real world. Within recent years, the rapid devel- opment of deep multimodal learning paves the way for advancing IR with multimodality. Benefiting from a variety of data types and modalities, some latest prevailing techniques are invented to show great facilitation in multimodal and IR learning, such as CLIP, Chat- GPT, GPT4, etc. In the context of IR, deep multimodal learning has shown the prominent potential to improve the performance of retrieval systems, by enabling them to better understand and process the diverse types of data that they encounter. Given the great potential shown by multimodal-empowered IR, there can be still unsolved challenges and open questions in the related di- rections. With this workshop, we target providing a platform for discussion about multimodal IR among scholars, practitioners, and other interested parties.
+                Information retrieval (IR) is a fundamental technique that aims to acquire information from a collection of documents, web pages, or other sources. 
+		    While traditional text-based IR has achieved great success, the under-utilization of varied data sources in different modalities (i.e., text, images, audio, and video) would hinder IR techniques from giving its full advancement and thus limits the applications in the real world. 
+		    Within recent years, the rapid development of deep multimodal learning paves the way for advancing IR with multimodality. 
+		    Benefiting from a variety of data types and modalities, some latest prevailing techniques are invented to show great facilitation in multimodal and IR learning, such as CLIP, ChatGPT, GPT4, etc. 
+		    In the context of IR, deep multimodal learning has shown the prominent potential to improve the performance of retrieval systems, by enabling them to better understand and process the diverse types of data that they encounter. 
+		    Given the great potential shown by multimodal-empowered IR, there can be still unsolved challenges and open questions in the related directions. 
+		    With this workshop, we target providing a platform for discussion about multimodal IR among scholars, practitioners, and other interested parties.
             </p>
             
 <!--           </div> -->
