--- a/index.html
+++ b/index.html
@@ -291,7 +291,11 @@ In the context of IR, deep multimodal learning has shown the prominent potential
          
             <br>
           <h4>Review Process</h4>
-            <p>All submissions will be peer-reviewed by at least two reviewers. The reviewing process will be <a href="https://www.acmmm2023.org/instructions/">two-way anonymized</a>. Authors are responsible for anonymizing the submissions.
+            <p>All submissions will be peer-reviewed by at least two reviewers of experts in the field. 
+		    The reviewing process will be <a href="https://www.acmmm2023.org/instructions/">two-way anonymized</a>. 
+		    Authors are responsible for anonymizing the submissions.
+		    Acceptance will be dependent on the relevance to the workshop topics, scientific novelty, and technical quality. 
+		    The accepted workshop papers will be published in the ACM Digital Library.
             </p>
         <br>
 	    
