--- a/index.html
+++ b/index.html
@@ -255,9 +255,9 @@ In the context of IR, deep multimodal learning has shown the prominent potential
      <br>
 	      
         <h4>Submission Instructions</h4>
-	<p>Page limits include diagrams and appendices. </p>
-	<p>Submissions should be single-blind, written in English, and formatted according to the current ACM two-column conference format. </p>
-	<p>Suitable LaTeX, Word, and Overleaf templates are available from the ACM Website (use “sigconf” proceedings template for LaTeX and the Interim Template for Word). </p>
+	<p  style="text-align:justify">Page limits include diagrams and appendices.
+	Submissions should be single-blind, written in English, and formatted according to the current ACM two-column conference format. 
+	Suitable LaTeX, Word, and Overleaf templates are available from the ACM Website (use “sigconf” proceedings template for LaTeX and the Interim Template for Word). </p>
 
 <!--           <p><i>Formatting Guidelines</i>:<br>
             We accept <i>long</i> (eight pages plus unlimited references) and <i>short</i> (four pages plus unlimited references) papers, which should
@@ -291,7 +291,7 @@ In the context of IR, deep multimodal learning has shown the prominent potential
          
             <br>
           <h4>Review Process</h4>
-            <p>All submissions will be peer-reviewed by at least two reviewers of experts in the field. 
+            <p  style="text-align:justify">All submissions will be peer-reviewed by at least two reviewers of experts in the field. 
 		    The reviewing process will be <a href="https://www.acmmm2023.org/instructions/">two-way anonymized</a>. 
 		    Authors are responsible for anonymizing the submissions.
 		    Acceptance will be dependent on the relevance to the workshop topics, scientific novelty, and technical quality. 
