--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@ In the context of IR, deep multimodal learning has shown the prominent potential
         <!-- <h4>About Paper Submissions</h4> -->
         <p>In this workshop, we welcome three types of submissions: 
 	<ol>
-		<li> <p class="green-text" >Position or perspective papers </p> (up to 4 pages in length, plus unlimited pages for references): original ideas, perspectives, research vision, and open challenges in the area of evaluation approaches for explainable recommender systems;</li>
-		<li> <p class="green-text" >Featured papers </p> (title and abstract of the paper, plus the original paper): already published papers or papers summarizing existing publications in leading conferences and high-impact journals that are relevant for the topic of the workshop;</li>
-		<li> <p class="green-text" >Demonstration papers </p> (up to 2 pages in length, plus unlimited pages for references): original or already published prototypes and operational evaluation approaches in the area of explainable recommender systems.</li>
+		<li> <a class="green-text" >Position or perspective papers </a> (up to 4 pages in length, plus unlimited pages for references): original ideas, perspectives, research vision, and open challenges in the area of evaluation approaches for explainable recommender systems;</li>
+		<li> <a class="green-text" >Featured papers </a> (title and abstract of the paper, plus the original paper): already published papers or papers summarizing existing publications in leading conferences and high-impact journals that are relevant for the topic of the workshop;</li>
+		<li> <a class="green-text" >Demonstration papers </a> (up to 2 pages in length, plus unlimited pages for references): original or already published prototypes and operational evaluation approaches in the area of explainable recommender systems.</li>
 	 </ol>
 	
 <!-- 	      <p>We welcome submissions of original work as <i>long</i> or <i>short</i> papers, as well as non-archival papers. We also accept paper submissions via <a href="">OpenReview</a>. All accepted papers will be presented at the workshop. </p> -->
