--- a/index.html
+++ b/index.html
@@ -416,8 +416,8 @@ Carl Strathearn, Dimitra Gkatzia
 <li class="list-group-item"> 17:00 - 17:05 | Ending Remark </li>
           </ul>
         </div>
-      </div>
-    </section> -->
+      </div> -->
+    </section>
  
     <!-- End Program Section -->
 
