--- a/index.html
+++ b/index.html
@@ -204,8 +204,15 @@ In the context of IR, deep multimodal learning has shown the prominent potential
 		<li> <a class="green-text" >Position or perspective papers </a> (up to 4 pages in length, plus unlimited pages for references): original ideas, perspectives, research vision, and open challenges in the topics of the workshop;</li>
 		<li> <a class="green-text" >Featured papers </a> (title and abstract of the paper, plus the original paper): already published papers or papers summarizing existing publications in leading conferences and high-impact journals that are relevant for the topics of the workshop;</li>
 		<li> <a class="green-text" >Demonstration papers </a> (up to 2 pages in length, plus unlimited pages for references): original or already published prototypes and operational evaluation approaches in the topics of the workshop.</li>
-	 </ol>
-	
+	 </ol>	
+       <br>
+	      
+      <p>
+	<a href="">
+	    <i class="bi bi-award-fill text-danger" style="font-size: 1.5rem;"></i>
+	</a>
+	We will select from the accepted papers the <b>Best Paper Award</b>, which will be announced during the workshop. 
+      </p>
 <!-- 	      <p>We welcome submissions of original work as <i>long</i> or <i>short</i> papers, as well as non-archival papers. We also accept paper submissions via <a href="">OpenReview</a>. All accepted papers will be presented at the workshop. </p> -->
         <br>
       
