--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ In the context of IR, deep multimodal learning has shown the prominent potential
 	<a href="">
 	    <i class="bi bi-award-fill text-danger" style="font-size: 1.5rem;"></i>
 	</a>
-	We will select from the accepted papers the <b>Best Paper Award</b>, which will be announced during the workshop. 
+	We will select from the accepted papers the <b class="red-text">Best Paper Award</b>, which will be announced during the workshop. 
       </p>
 <!-- 	      <p>We welcome submissions of original work as <i>long</i> or <i>short</i> papers, as well as non-archival papers. We also accept paper submissions via <a href="">OpenReview</a>. All accepted papers will be presented at the workshop. </p> -->
         <br>
