--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ In the context of IR, deep multimodal learning has shown the prominent potential
               <i>Topics of interests include but not limited to:</i>
             </p>
             <ul>
-                <li><i class="ri-check-double-line"></i> Image-text Multimodal Learning and Retrieval; such as</li>		    
+                <li><i class="ri-check-double-line" style="font-size: 20px;color: #ef6603;line-height: 2"></i> Image-text Multimodal Learning and Retrieval; such as	    
 		    <ul>
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Vision-language Alignment Analysis</li>
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Multimodal Fusion and Embeddings</li>
@@ -229,8 +229,8 @@ In the context of IR, deep multimodal learning has shown the prominent potential
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Structured Vision-language Learning</li>
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Commonsense-aware Vision-language Learning</li>
 		    </ul>
-		    
-		<li><i class="ri-check-double-line"></i> Video-text Understanding and Retrieval; such as </li>	    
+	    	</li>	
+		<li><i class="ri-check-double-line" style="font-size: 20px;color: #ef6603;line-height: 2"></i> Video-text Understanding and Retrieval; such as
 		    <ul>
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Video-text Retrieval</li>
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Video (Corpus) Moment Retrieval</li>
@@ -238,8 +238,8 @@ In the context of IR, deep multimodal learning has shown the prominent potential
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Video Question Answering</li>
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Video Dialogue</li>
 		    </ul>
-
-		<li><i class="ri-check-double-line"></i> Dialogue Multimodal Retreival; such as </li>	    
+		</li>	    
+		<li><i class="ri-check-double-line" style="font-size: 20px;color: #ef6603;line-height: 2"></i> Dialogue Multimodal Retreival; such as    
 		    <ul>
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Multimedia Pre-training in Dialogue</li>
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Multimedia Search and Recommendation</li>
@@ -247,16 +247,18 @@ In the context of IR, deep multimodal learning has shown the prominent potential
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- User-centered Dialogue Retreival</li>
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- New Applications on ChatGPT\&Visual-GPT and Beyond</li>
 		    </ul>
+		</li>	    
 
-		<li><i class="ri-check-double-line"></i> Reliable Multimodal Retrieval; such as</li>	    
+		<li><i class="ri-check-double-line" style="font-size: 20px;color: #ef6603;line-height: 2"></i> Reliable Multimodal Retrieval; such as    
 		    <ul>
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Explainable Multimodal Retrieval</li>
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Typical Failures of ChatGPT and other Large Models</li>
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Adversarial Attack and Defense</li>
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- New Evaluation Metrics</li>
 		    </ul>
+		</li>	    
 
-		<li><i class="ri-check-double-line"></i> Multimedia Retrieval Applications; such as</li>	    
+		<li><i class="ri-check-double-line" style="font-size: 20px;color: #ef6603;line-height: 2"></i> Multimedia Retrieval Applications; such as</li>	    
 		    <ul>
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Multimodal-based Reasoning</li>
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Unapired Image Captioning</li>
@@ -264,6 +266,7 @@ In the context of IR, deep multimodal learning has shown the prominent potential
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Multimodal Translation</li>
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Opinion/Sentiment-oriented Multimodal Analysis for IR</li>
 		    </ul>
+		</li>	    
 
               </ul>
             <!-- <a href="#" class="btn-learn-more">Learn More</a> -->
