--- a/index.html
+++ b/index.html
@@ -779,20 +779,136 @@ Carl Strathearn, Dimitra Gkatzia
             <p>Program Committee</p>
           </div>
   
-<!--           <div class="row">
-              <ul class="no-bullets">
-   <li> [1] Bo Han (Hong Kong Baptist University, HK)  </li>
-   <li> [2] Xiang Wang (USTC, China)  </li>
-   <li> [3] Kevin Lin (Microsoft Azure AI, USA)  </li>
-   <li> [4] Giorgos Tolias (CTU, Czech)  </li>
-   <li> [5] \href{https://personal.ntu.edu.sg/hanwangzhang/}{Hanwang Zhang} (NTU, Singapore)   </li>
-   <li> [6] Efstratios Gavves (UvA, Netherlands)  </li>
-   <li> [7] Xiatian Zhu (University of Surrey, UK)  </li>
-   <li> [8] Anthony Dick (The University of Adelaide, AU)  </li>
-              </ul>
-          </div> -->
-  	<p>TBA</p>
           
+        <div class="row">
+
+          <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up">
+              <div class="member-img">
+                <img src="assets/img/PCs/chen-long.jpeg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4><a href="https://zjuchenlong.github.io/">Long Chen</a></h4>
+                <span>The Hong Kong University of Science and Technology</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up">
+              <div class="member-img">
+                <img src="assets/img/PCs/wang-xun.jpeg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4><a href="https://sites.google.com/site/xunyangprofile/">Xun Yang</a></h4>
+                <span>University of Science and Technology of China</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up">
+              <div class="member-img">
+                <img src="assets/img/PCs/chenliang.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4><a href="http://www.lichenliang.net/">Chenliang Li</a></h4>
+                <span>Wuhan University</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up">
+              <div class="member-img">
+                <img src="assets/img/PCs/yixing-cao.png" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4><a href="https://sites.google.com/view/yixin-homepage">Yixin Cao</a></h4>
+                <span>Singapore Management University</span>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up">
+              <div class="member-img">
+                <img src="assets/img/PCs/Peiguang.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4><a href="https://scholar.google.com/citations?user=Kr-OYyQAAAAJ">Peiguang Jing</a></h4>
+                <span>Tianjin University</span>
+              </div>
+            </div>
+          </div>
+		
+          <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up">
+              <div class="member-img">
+                <img src="assets/img/PCs/Junyu-Gao.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4><a href="https://scholar.google.com/citations?user=y1nOY24AAAAJ">Junyu Gao</a></h4>
+                <span>Chinese Academy of Sciences</span>
+              </div>
+            </div>
+          </div>
+		
+
+          <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up">
+              <div class="member-img">
+                <img src="assets/img/PCs/wangz.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4><a href="https://wangzwhu.github.io/home/index.html">Zheng Wang</a></h4>
+                <span>Wuhan University</span>
+              </div>
+            </div>
+          </div>
+		
+
+          <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up">
+              <div class="member-img">
+                <img src="assets/img/PCs/PingLIU.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4><a href="https://sites.google.com/site/pingliu264/">Ping Liu</a></h4>
+                <span>A*STAR</span>
+              </div>
+            </div>
+          </div>
+		
+
+          <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up">
+              <div class="member-img">
+                <img src="assets/img/PCs/QingjiGuan.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4><a href="https://guanqj932.github.io/">Qingji Guan</a></h4>
+                <span>Beijing Jiaotong University</span>
+              </div>
+            </div>
+          </div>
+		
+
+          <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up">
+              <div class="member-img">
+                <img src="assets/img/PCs/dwj.jpeg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4><a href="https://weijiandeng.xyz/">Weijian Deng</a></h4>
+                <span>Australian National University</span>
+              </div>
+            </div>
+          </div>
+		
+
+        </div>
   
         </div>
       </section><!-- End PC Section -->
