--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@ Carl Strathearn, Dimitra Gkatzia
 
 
     <!-- ======= PC Section ======= -->
-    <section id="pc" class="pc">
+    <section id="pc" class="team">
         <div class="container">
   
           <div class="section-title" data-aos="zoom-out">
@@ -812,7 +812,7 @@ Carl Strathearn, Dimitra Gkatzia
                 <img src="assets/img/PCs/chenliang.jpg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
-                <h4><a href="http://www.lichenliang.net/">Chenliang Li</a></h4>
+                <h4><a href="https://www.lichenliang.net/">Chenliang Li</a></h4>
                 <span>Wuhan University</span>
               </div>
             </div>
