--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ In the context of IR, deep multimodal learning has shown the prominent potential
               <i>Topics of interests include but not limited to:</i>
             </p>
             <ul>
-                <li><i class="ri-check-double-line" style="font-size: 20px;color: #ef6603;line-height: 2"></i> Image-text Multimodal Learning and Retrieval; such as	    
+                <li><i class="ri-check-double-line" style="font-size: 20px;color: #ef6603;line-height: 2"></i> Image-text Multimodal Learning and Retrieval, such as	    
 		    <ul>
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Vision-language Alignment Analysis</li>
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Multimodal Fusion and Embeddings</li>
@@ -230,7 +230,7 @@ In the context of IR, deep multimodal learning has shown the prominent potential
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Commonsense-aware Vision-language Learning</li>
 		    </ul>
 	    	</li>	
-		<li><i class="ri-check-double-line" style="font-size: 20px;color: #ef6603;line-height: 2"></i> Video-text Understanding and Retrieval; such as
+		<li><i class="ri-check-double-line" style="font-size: 20px;color: #ef6603;line-height: 2"></i> Video-text Understanding and Retrieval, such as
 		    <ul>
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Video-text Retrieval</li>
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Video (Corpus) Moment Retrieval</li>
@@ -239,7 +239,7 @@ In the context of IR, deep multimodal learning has shown the prominent potential
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Video Dialogue</li>
 		    </ul>
 		</li>	    
-		<li><i class="ri-check-double-line" style="font-size: 20px;color: #ef6603;line-height: 2"></i> Dialogue Multimodal Retreival; such as    
+		<li><i class="ri-check-double-line" style="font-size: 20px;color: #ef6603;line-height: 2"></i> Dialogue Multimodal Retreival, such as    
 		    <ul>
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Multimedia Pre-training in Dialogue</li>
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Multimedia Search and Recommendation</li>
@@ -249,7 +249,7 @@ In the context of IR, deep multimodal learning has shown the prominent potential
 		    </ul>
 		</li>	    
 
-		<li><i class="ri-check-double-line" style="font-size: 20px;color: #ef6603;line-height: 2"></i> Reliable Multimodal Retrieval; such as    
+		<li><i class="ri-check-double-line" style="font-size: 20px;color: #ef6603;line-height: 2"></i> Reliable Multimodal Retrieval, such as    
 		    <ul>
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Explainable Multimodal Retrieval</li>
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Typical Failures of ChatGPT and other Large Models</li>
@@ -258,7 +258,7 @@ In the context of IR, deep multimodal learning has shown the prominent potential
 		    </ul>
 		</li>	    
 
-		<li><i class="ri-check-double-line" style="font-size: 20px;color: #ef6603;line-height: 2"></i> Multimedia Retrieval Applications; such as</li>	    
+		<li><i class="ri-check-double-line" style="font-size: 20px;color: #ef6603;line-height: 2"></i> Multimedia Retrieval Applications, such as</li>	    
 		    <ul>
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Multimodal-based Reasoning</li>
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Unapired Image Captioning</li>
