--- a/index.html
+++ b/index.html
@@ -977,6 +977,18 @@ Carl Strathearn, Dimitra Gkatzia
               </div>
             </div>
           </div>
+		
+	  <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up">
+              <div class="member-img">
+                <img src="assets/img/organizers/jieming.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4><a href="https://haofei.vip">Jieming Zhu</a></h4>
+                <span>Huawei Noah’s Ark Lab</span>
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up">
