--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ In the context of IR, deep multimodal learning has shown the prominent potential
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Multimedia Search and Recommendation</li>
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- Multimodal Response Generation</li>
 			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- User-centered Dialogue Retreival</li>
-			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- New Applications on ChatGPT\&Visual-GPT and Beyond</li>
+			<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">- New Applications on ChatGPT&Visual-GPT and Beyond</li>
 		    </ul>
 		</li>	    
 
@@ -319,7 +319,7 @@ In the context of IR, deep multimodal learning has shown the prominent potential
 	    
         <h4>Important Dates</h4>
         <ul>
-          <li><b class="orange-text">Paper Submission: </b> <b>July 21, 2023 (AoE)</b> </li>
+          <li><b class="orange-text">Paper Submission: </b> <b>July 26, 2023 (AoE)</b> </li>
 
           <li><b class="orange-text">Notification of Acceptance: </b> <b>July 30, 2023 (AoE)</b> </li>
 		
