--- a/index.html
+++ b/index.html
@@ -321,9 +321,9 @@ In the context of IR, deep multimodal learning has shown the prominent potential
         <ul>
           <li><b class="orange-text">Paper Submission: </b> <b><del>July 29, 2023 (AoE)</del></b> </li>
 
-          <li><b class="orange-text">Notification of Acceptance: </b> <b><del>August 7, 2023 (AoE)</del>del</b> </li>
+          <li><b class="orange-text">Notification of Acceptance: </b> <b><del>August 7, 2023 (AoE)</del></b> </li>
 		
-          <li><b class="orange-text">Camera-ready Submission: </b> <b>August 11, 2023 (AoE)</b> </li>
+          <li><b class="orange-text">Camera-ready Submission: </b> <b>August 22, 2023 (AoE)</b> </li>
 		
           <li><b class="orange-text">Workshop dates: </b> <b>October 28, 2023 - November 3, 2023 (AoE)</b> </li>
 		          
