--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@ In the context of IR, deep multimodal learning has shown the prominent potential
 		<li> <a class="green-text" >Featured papers </a> (title and abstract of the paper, plus the original paper): already published papers or papers summarizing existing publications in leading conferences and high-impact journals that are relevant for the topics of the workshop;</li>
 		<li> <a class="green-text" >Demonstration papers </a> (up to 2 pages in length, plus unlimited pages for references): original or already published prototypes and operational evaluation approaches in the topics of the workshop.</li>
 	 </ol>	
-	      
+
+      All the accepted papers will be archived in the ACM MM proceedings.	      
       <p>
 	<a href="">
 	    <i class="bi bi-award-fill text-danger" style="font-size: 1.5rem;"></i>
