--- a/index.html
+++ b/index.html
@@ -206,7 +206,9 @@ In the context of IR, deep multimodal learning has shown the prominent potential
 		<li> <a class="green-text" >Demonstration papers </a> (up to 2 pages in length, plus unlimited pages for references): original or already published prototypes and operational evaluation approaches in the topics of the workshop.</li>
 	 </ol>	
 
-      All the accepted papers will be archived in the ACM MM proceedings.	      
+      All the accepted papers will be archived in the ACM MM proceedings. Authors of accepted papers will be presented at the workshop.
+
+	<br>
       <p>
 	<a href="">
 	    <i class="bi bi-award-fill text-danger" style="font-size: 1.5rem;"></i>
