--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 <!--          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>-->
           <li><a class="nav-link scrollto" href="#about">About</a></li>
          <li><a class="nav-link scrollto" href="#cfp">Call for Papers</a></li>
+         <li><a class="nav-link scrollto" href="#acc_paper">Accepted Papers</a></li>
           <li><a class="nav-link scrollto" href="#program">Program</a></li>
-<!--          <li><a class="nav-link scrollto" href="#paper">Accepted Papers</a></li>-->
 <!--           <li><a class="nav-link scrollto " href="#shared">Shared Task</a></li> -->
           <li><a class="nav-link scrollto" href="#speaker">Invited Speakers</a></li>
           <li><a class="nav-link scrollto" href="#pc">Committee</a></li>
@@ -213,7 +213,7 @@ In the context of IR, deep multimodal learning has shown the prominent potential
 	<a href="">
 	    <i class="bi bi-award-fill text-danger" style="font-size: 1.5rem;"></i>
 	</a>
-	We will select from the accepted papers the <b class="red-text">Best Paper Award</b> and <b class="red-text">Best Student Paper Award</b>, which will be announced during the workshop. 
+	We will select from the accepted papers the <b class="red-text">Best Paper Award</b>, which will be announced during the workshop. 
       </p>
 <!-- 	      <p>We welcome submissions of original work as <i>long</i> or <i>short</i> papers, as well as non-archival papers. We also accept paper submissions via <a href="">OpenReview</a>. All accepted papers will be presented at the workshop. </p> -->
         <br>
@@ -326,7 +326,7 @@ In the context of IR, deep multimodal learning has shown the prominent potential
 
           <li><b class="orange-text">Notification of Acceptance: </b> <b><del>August 7, 2023 (AoE)</del></b> </li>
 		
-          <li><b class="orange-text">Camera-ready Submission: </b> <b>August 22, 2023 (AoE)</b> </li>
+          <li><b class="orange-text">Camera-ready Submission: </b> <b><del>August 22, 2023 (AoE)</del></b> </li>
 		
           <li><b class="orange-text">Workshop dates: </b> <b>October 28, 2023 - November 3, 2023 (AoE)</b> </li>
 		          
@@ -336,8 +336,60 @@ In the context of IR, deep multimodal learning has shown the prominent potential
       </div>
     </section>
     <!-- End Dates Section -->
-	  
 
+
+
+	  
+    <!-- Start Program Section -->
+    <section id="acc_paper" class="faq">
+      <div class="container">
+        <div class="section-title" data-aos="zoom-out">
+          <h2>Accepted Papers</h2>
+
+	  <ol>
+	    <li>
+	      <em>Self-Distilled Dynamic Network for Language-based Fashion Retrieval</em><br>
+	      Hangfei Li, Yiming Wu, Fangfang Wang
+	    </li>
+	    <li>
+	      <em>Video Referring Expression Comprehension via Transformer with Content-conditioned Query</em><br>
+	      Jiang Ji, Meng Cao, Tengtao Song, Long Chen, Yi Wang, Yuexian Zou
+	    </li>
+	    <li>
+	      <em>Boon: A Neural Search Engine for Cross-Modal Information Retrieval</em><br>
+	      Yan Gong, Georgina Cosma
+	    </li>
+	    <li>
+	      <em>On Popularity Bias of Multimodal-aware Recommender Systems: a Modalities-driven Analysis</em><br>
+	      Daniele Malitesta, Giandomenico Cornacchia, Claudio Pomo, Tommaso Di Noia
+	    </li>
+	    <li>
+	      <em>JM-CLIP: A Joint Modal Similarity Contrastive Learning Model for Video-Text Retrieval</em><br>
+	      Mingyuan Ge, Yewen Li, Mingyong Li
+	    </li>
+	    <li>
+	      <em>LMAO: Hateful Meme Classification with Textual Inversion</em><br>
+	      Giovanni Burbi, Alberto Baldrati, Lorenzo Agnolucci, Marco Bertini, Alberto Del Bimbo
+	    </li>
+	    <li>
+	      <em>TC-OCR: TableCraft OCR for Efficient Detection & Recognition of Table Structure & Content</em><br>
+	      Avinash Anand, Raj Shivprakash Poonam Jaiswal, Pijush Bhuyan, Mohit Gupta, Siddhesh Bangar, Md Modassir Imam, Rajiv Ratn Shah, Shin'ichi Satoh
+	    </li>
+	    <li>
+	      <em>Metaverse Retrieval: Finding the Best Metaverse Environment via Language</em><br>
+	      Ali Abdari, Alex Falcon, Giuseppe Serra
+	    </li>
+	    <li>
+	      <em>Prescription Recommendation based on Intention Retrieval Network and Multimodal Medical</em><br>
+	      Feng Gao, Yao Chen, Maofu Liu
+	    </li>
+	  </ol>
+	</div>
+        <div>	  
+    </section>
+
+
+		
     <!-- Start Program Section -->
     <section id="program" class="faq">
       <div class="container">
