--- a/index.html
+++ b/index.html
@@ -344,43 +344,45 @@ In the context of IR, deep multimodal learning has shown the prominent potential
     <section id="acc_paper" class="faq">
       <div class="container">
         <div class="section-title" data-aos="zoom-out">
-          <h2>Accepted Papers</h2>
-
+          <h2>Accepted Papers</h2>		
+          <p>Program</p>
+        </div>
+	      
 	  <ol>
 	    <li>
-	      <em>Self-Distilled Dynamic Network for Language-based Fashion Retrieval</em><br>
+	      <b><em>Self-Distilled Dynamic Network for Language-based Fashion Retrieval</em></b><br>
 	      Hangfei Li, Yiming Wu, Fangfang Wang
 	    </li>
 	    <li>
-	      <em>Video Referring Expression Comprehension via Transformer with Content-conditioned Query</em><br>
+	      <b><em>Video Referring Expression Comprehension via Transformer with Content-conditioned Query</em></b><br>
 	      Jiang Ji, Meng Cao, Tengtao Song, Long Chen, Yi Wang, Yuexian Zou
 	    </li>
 	    <li>
-	      <em>Boon: A Neural Search Engine for Cross-Modal Information Retrieval</em><br>
+	      <b><em>Boon: A Neural Search Engine for Cross-Modal Information Retrieval</em><br>
 	      Yan Gong, Georgina Cosma
 	    </li>
 	    <li>
-	      <em>On Popularity Bias of Multimodal-aware Recommender Systems: a Modalities-driven Analysis</em><br>
+	      <b><em>On Popularity Bias of Multimodal-aware Recommender Systems: a Modalities-driven Analysis</em></b><br>
 	      Daniele Malitesta, Giandomenico Cornacchia, Claudio Pomo, Tommaso Di Noia
 	    </li>
 	    <li>
-	      <em>JM-CLIP: A Joint Modal Similarity Contrastive Learning Model for Video-Text Retrieval</em><br>
+	      <b><em>JM-CLIP: A Joint Modal Similarity Contrastive Learning Model for Video-Text Retrieval</em></b><br>
 	      Mingyuan Ge, Yewen Li, Mingyong Li
 	    </li>
 	    <li>
-	      <em>LMAO: Hateful Meme Classification with Textual Inversion</em><br>
+	      <b><em>LMAO: Hateful Meme Classification with Textual Inversion</em></b><br>
 	      Giovanni Burbi, Alberto Baldrati, Lorenzo Agnolucci, Marco Bertini, Alberto Del Bimbo
 	    </li>
 	    <li>
-	      <em>TC-OCR: TableCraft OCR for Efficient Detection & Recognition of Table Structure & Content</em><br>
+	      <b><em>TC-OCR: TableCraft OCR for Efficient Detection & Recognition of Table Structure & Content</em></b><br>
 	      Avinash Anand, Raj Shivprakash Poonam Jaiswal, Pijush Bhuyan, Mohit Gupta, Siddhesh Bangar, Md Modassir Imam, Rajiv Ratn Shah, Shin'ichi Satoh
 	    </li>
 	    <li>
-	      <em>Metaverse Retrieval: Finding the Best Metaverse Environment via Language</em><br>
+	      <b><em>Metaverse Retrieval: Finding the Best Metaverse Environment via Language</em></b><br>
 	      Ali Abdari, Alex Falcon, Giuseppe Serra
 	    </li>
 	    <li>
-	      <em>Prescription Recommendation based on Intention Retrieval Network and Multimodal Medical</em><br>
+	      <b><em>Prescription Recommendation based on Intention Retrieval Network and Multimodal Medical</em></b><br>
 	      Feng Gao, Yao Chen, Maofu Liu
 	    </li>
 	  </ol>
