--- a/index.html
+++ b/index.html
@@ -344,8 +344,8 @@ In the context of IR, deep multimodal learning has shown the prominent potential
     <section id="acc_paper" class="faq">
       <div class="container">
         <div class="section-title" data-aos="zoom-out">
-          <h2>Accepted Papers</h2>		
-          <p>Program</p>
+          <h2>Papers</h2>		
+          <p>Accepted Papers</p>
         </div>
 	      
 	  <ol>
@@ -358,7 +358,7 @@ In the context of IR, deep multimodal learning has shown the prominent potential
 	      Jiang Ji, Meng Cao, Tengtao Song, Long Chen, Yi Wang, Yuexian Zou
 	    </li>
 	    <li>
-	      <b><em>Boon: A Neural Search Engine for Cross-Modal Information Retrieval</em><br>
+	      <b><em>Boon: A Neural Search Engine for Cross-Modal Information Retrieval</em></b><br>
 	      Yan Gong, Georgina Cosma
 	    </li>
 	    <li>
